@@ -1,3 +1,13 @@
+2003-12-16  Shaun McCance  <shaunm@gnome.org>
+
+	* src/yelp-db-pager.c:
+	* src/yelp-pager.c:
+	* src/yelp-pager.h:
+	* src/yelp-toc-pager.c:
+	* src/yelp-window.c:
+	- Add prev, next, and toc to YelpPage.
+	- Create menu items for Previous, Next, and Contents.
+
 2003-12-15  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-db-pager.c:
